--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -106,7 +106,7 @@ img {
 
 header {
   width:270px;
-  float:left;
+  float:top;
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
 }
@@ -190,7 +190,7 @@ hr {
 
 footer {
   width:270px;
-  float:left;
+  float:bottom;
   position:fixed;
   bottom:50px;
   -webkit-font-smoothing:subpixel-antialiased;
