refactor (minimal): header

--- a/_layouts/default-minimal.html
+++ b/_layouts/default-minimal.html
@@ -13,8 +13,10 @@
   </head>
   <body>
     <div class="wrapper">
+      <header>
       {% include navigation.html %}
-      
+      </header>
+
       <section>
 
       {{ content }}
